src/Javafe/trunk/src/test/resources/FromInterface.java
package foo.bar;

interface B {}

class A extends B {}		// error
